--- a/html-css/google_landing_page/index.html
+++ b/html-css/google_landing_page/index.html
@@ -5,8 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="content">
+                <div class="head_1">
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Store</a></li>
+                    </ul>
+                </div>
+                <div class="head_2">
+                    <ul>
+                        <li><a href="#">Gmail</a></li>
+                        <li><a href="#">İmages</a></li>
+                    </ul>
+                    <a href="#"><img src="./images/appicon.png"></a>
+                    <button type="submit">Sign in</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="content_google">
+                <div class="logo">
+                    <img src="./images/googlelogo.png">
+                </div>
+                <div class="btn">
+                    <div class="img_search">
+                        <img src="./images/Magnifying_glass_icon.png" alt="">
+                    </div>
+                    <input type="search" name="" id="" placeholder="asdasdad">
+                    <div class="mic" id="mico">
+                        <a href="#"><img src="./images/google_microphone.png" alt="" id="mico"></a>
+                    </div>
+                </div>
+                <div class="btns">
+                    <button type="submit">Google Search</button>
+                    <button type="submit">I'm Feeling Lucky</button>
+                </div>
+                <div class="expalin">
+                    <p>Other Languages  you can use Google <a href="">Google</a></p>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
