--- a/html-css/google_landing_page/index.html
+++ b/html-css/google_landing_page/index.html
@@ -54,6 +54,31 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container-footer">
+            <div class="content_turkey">
+                <div class="footer_1">
+                    <p>Turkey</p>
+                </div>
+                <div class="footer_2">
+                    <div class="footer-str">
+                        <ul>
+                            <li><a href="">Advertising</a></li>
+                            <li><a href="">Businiess</a></li>
+                            <li><a href="">How Search Works</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-end">
+                        <ul>
+                            <li><a href="">Privacy</a></li>
+                            <li><a href="">Terms</a></li>
+                            <li><a href="">Settings</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
