--- a/html-css/CC-02-blog/index.html
+++ b/html-css/CC-02-blog/index.html
@@ -15,7 +15,8 @@
             </div>
             <div class="info">
                 <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, expedita molestiae eos voluptatem laudantium neque?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, expedita molestiae eos voluptatem laudantium neque?
+                </p>
             </div>
         </div>
     </div>
