--- a/html-css/checkout_form/index.html
+++ b/html-css/checkout_form/index.html
@@ -7,9 +7,12 @@
     <title>Chechout</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
+        <div class="title"><h1>Checkout</h1></div>
+    <div class="main">
         <div class="info info-1">
             <div class="box box1">
                 <h1>Contact information</h1>
@@ -29,17 +32,17 @@
                 <h1>Shipping adress</h1>
                 <label for="full_name">Full Name</label>
                 <div class="inpt name">
-                    <i class="fa fa-phone"></i>
+                    <i class="fa fa-user"></i>
                     <input type="text" name="name" id="name" placeholder="Enter your Full  name...">
                 </div>
                 <label for="adress">Adress</label>
                 <div class="inpt adress">
-                    <i class="fa fa-phone"></i>
+                    <i class="fa fa-map"></i>
                     <input type="text" name="adress" id="adress" placeholder="Enter your adress...">
                 </div>
                 <label for="city">City</label>
                 <div class="inpt city">
-                    <i class="fa fa-phone"></i>
+                    <i class="fa fa-building"></i>
                     <input type="text" name="city" id="city" placeholder="Enter your city...">
                 </div>
             </div>
@@ -55,9 +58,9 @@
                     </select>
                     </div>
                     <div class="postcode">
-                    <label for="postcode">Phone</label>
+                    <label for="postcode">Postal Code</label>
                     <div class="inpt phone">
-                        <i class="fa fa-phone"></i>
+                        <i class="fa fa-mail"></i>
                         <input type="number" name="postcode" id="postcode" placeholder="Enter your postal code...">
                     </div>
                 </div>
@@ -105,5 +108,7 @@
             </div>
         </div>
     </div>
+    <div class="continue"><button>Contunie</button></div>
+</div>
 </body>
 </html>
