--- a/javascript/to_do_list/index.html
+++ b/javascript/to_do_list/index.html
@@ -12,20 +12,20 @@
    
 
     <div class="container">
+        <h1>To-Do List</h1>
         <div class="addtask">
             <input type="text" placeholder="Add a Task">
             <button>Add</button>
         </div>
         <ol class="notCompleted">
             <h3>Not Complated</h3>
-            
         </ol>
         <ol class="Completed">
             <h3>Complated</h3>
         </ol>
     </div>
 
-
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
 </body>
 </html>
