--- a/javascript/guess_number/index.html
+++ b/javascript/guess_number/index.html
@@ -10,9 +10,9 @@
 <body>
     
     <div id="container">
-        <p>Guess a number 1-100.</p>
+        <p id="guess">Guess a number 1-100.</p>
         <p id="outputtext">Enter a number below</p>
-        <input type="text" id="userInput"><button id="btn">Enter</button>
+        <div><input type="text" id="userInput" placeholder="Enter a number "><button id="btn">Enter</button></div>
         <p id="outputcount"></p>
     </div>
 
