--- a/javascript/guess_number/index.html
+++ b/javascript/guess_number/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Guess</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     
@@ -14,8 +15,8 @@
         <p id="outputtext">Enter a number below</p>
         <div><input type="text" id="userInput" placeholder="Enter a number "><button id="btn">Enter</button></div>
         <p id="outputcount"></p>
+        <img id="image" src="./2.jpg" alt="">
     </div>
-
 
 
 
